hover effact added

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -99,6 +107,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -114,6 +130,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -154,6 +178,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -169,6 +201,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                     <div class='product'>
@@ -186,6 +226,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -201,6 +249,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -257,6 +313,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -272,6 +336,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                     <div class='product'>
@@ -289,6 +361,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -304,6 +384,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                     <div class='product'>
@@ -321,6 +409,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -336,6 +432,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                     <div class='product'>
@@ -353,6 +457,14 @@
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
+                        </div>
                     </div>
                     <div class='product'>
                         <div class='productImg'>
@@ -368,6 +480,14 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                             <h3>$<span id="product-price">350</span></h3>
+                        </div>
+                        <div class='productBtns'>
+                            <p id="shopping">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </p>
+                            <p id="heart">
+                                <i class="fa-solid fa-heart"></i>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -439,15 +559,25 @@
                 <div class='FollowUs'>
                     <div class='Follow'>
                         <img src='./img/follow2.jpg' alt=''>
+                        <a href='#'>
+                            <i class="fa-brands fa-facebook FollowIcon"></i>
+                        </a>
                     </div>
                     <div class='Follow'>
                         <img src='./img/follow1.jpg' alt=''>
+                        <a href='#'>
+                            <i class="fa-brands fa-instagram FollowIcon"> </i>
+                        </a>
                     </div>
                     <div class='Follow'>
                         <img src='./img/follow4.jpg' alt=''>
+                        <a href='#'>
+                            <i class="fa-brands fa-youtube FollowIcon"></i></a>
                     </div>
                     <div class='Follow'>
                         <img src='./img/follow3.jpg' alt=''>
+                        <a href='#'>
+                            <i class="fa-brands fa-linkedin FollowIcon"></i></a>
                     </div>
                 </div>
             </div>
@@ -493,7 +623,7 @@
                     <div class=''>
                         <div class='google'>
                             <div class=''>
-                                <i class="fa-brands fa-google-play fotIcon"></i>
+                                <a href='#'><i class="fa-brands fa-google-play fotIcon"></i></a>
                             </div>
                             <div class=''>
                                 <p class="light-para">get it on</p>
@@ -502,7 +632,8 @@
                         </div>
                         <div class='apple'>
                             <div class=''>
-                                <i class="fa-brands fa-apple fotIcon"></i>
+                                <a href='#'>
+                                    <i class="fa-brands fa-apple fotIcon"></i></a>
                             </div>
                             <div class=''>
                                 <p class="light-para">get it on</p>
@@ -514,7 +645,7 @@
             </div>
         </div>
         <div class='Copyright'>
-            <p class="light-para">Copyright &copy; 2022 <span class="link">FASHION-BD.</span> All right reserved.</p>
+            <p class="light-para">Copyright &copy; 2022 <a href='#' class="link">FASHION-BD.</a> All right reserved.</p>
         </div>
     </footer>
     <!-- Footer part end -->
