--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,14 @@
                 <a href='#'>Product</a>
                 <a href='#'>Brand</a>
                 <a href='#'>Contract</a>
-                <a href='#'><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href='#'><i class="fa-solid fa-heart"></i></a>
+                <a href='#' id="shoppingMenu" class="shopping">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span id="shopCount" class='count'>0</span>
+                </a>
+                <a href='#' id="heartMenu" class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                    <span id="heartCount" class='count'>0</span>
+                </a>
             </div>
         </nav>
     </header>
@@ -84,10 +90,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -108,10 +114,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -132,10 +138,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -179,10 +185,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -203,10 +209,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -227,10 +233,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -251,10 +257,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -314,10 +320,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -338,10 +344,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -362,10 +368,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -386,10 +392,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -410,10 +416,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -434,10 +440,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -458,10 +464,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -482,10 +488,10 @@
                             <h3>$<span id="product-price">350</span></h3>
                         </div>
                         <div class='productBtns'>
-                            <p id="shopping">
+                            <p class="shopping">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </p>
-                            <p id="heart">
+                            <p class="heart">
                                 <i class="fa-solid fa-heart"></i>
                             </p>
                         </div>
@@ -647,6 +653,7 @@
         <div class='Copyright'>
             <p class="light-para">Copyright &copy; 2022 <a href='#' class="link">FASHION-BD.</a> All right reserved.</p>
         </div>
+        <div id="scrollToTop"><span>Go Up</span></div>
     </footer>
     <!-- Footer part end -->
 </body>
