responsive for mobile tablet and computer

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
                 <a href='#'>Product</a>
                 <a href='#'>Brand</a>
                 <a href='#'>Contract</a>
-                <a href='#' id="shoppingMenu" class="shopping">
+                <a href='#' id="shoppingMenu" class="shoppingMain">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span id="shopCount" class='count'>0</span>
                 </a>
-                <a href='#' id="heartMenu" class="heart">
+                <a href='#' id="heartMenu" class="heartMain">
                     <i class="fa-solid fa-heart"></i>
                     <span id="heartCount" class='count'>0</span>
                 </a>
@@ -654,6 +654,8 @@
             <p class="light-para">Copyright &copy; 2022 <a href='#' class="link">FASHION-BD.</a> All right reserved.</p>
         </div>
         <div id="scrollToTop"><span>Go Up</span></div>
+        <div id="AddedCart">Added to Cart</div>
+        <div id="AddedHeart">Added to Heart</div>
     </footer>
     <!-- Footer part end -->
 </body>
